Bug 400241 - Can't double click to edit text
Summary: Can't double click to edit text
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 4.1.5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-24 13:47 UTC by Camille Bissuel
Modified: 2019-05-14 06:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Camille Bissuel 2018-10-24 13:47:45 UTC
I'm testing the new 4.0 text tool, and its works much better than before, but there is a small usability issue : Once a text is created, I can't double click to edit it, as explained in the wiki (https://docs.krita.org/en/reference_manual/tools/text.html)

But there is a workaround : it works if I select it and press "Enter".

Tested under Ubuntu 18.04 with Krita 4.1.5 PPA

Thanks again !
Comment 1 Halla Rempt 2018-10-30 14:01:32 UTC
Confirmed, but we're working on an easier way to enable the text tool, by adding an on-canvas edit button that opens the editor window.
Comment 2 Scott Petrovic 2019-04-25 14:35:03 UTC
we are going to have to regroup about having an edit button on the canvas text box. That was creating some odd situations when the text box started to be rotated around and the edit button moved around oddly. That change was reverted.

With the other requests with text UX, it might be better to have GUI button in the tool options along with all the other vector properties that you can control like text fill and stroke. One idea would be to have a "T" tab in the tool options if a text object is selected. There could be a button there to open the text editor
Comment 3 vanyossi 2019-05-14 06:19:03 UTC
Git commit b43b126901242d8fe7ffbc9b9d09348e68ecc5b5 by Ivan Yossi.
Committed on 14/05/2019 at 06:18.
Pushed by ivany into branch 'master'.

Fix double Click does not open edit Text

M  +3    -5    plugins/tools/svgtexttool/SvgTextTool.cpp

https://invent.kde.org/kde/krita/commit/b43b126901242d8fe7ffbc9b9d09348e68ecc5b5