Fix double Click does not open edit Text

BUG:400241